--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -12,3 +12,6 @@ sonar.organization=gumayusi78
 
 # Encoding of the source code. Default is default system encoding
 #sonar.sourceEncoding=UTF-8
+sonar.sources=QuestionBankQuestionServiceImpl.java
+# 排除所有其他文件（避免误扫）
+sonar.exclusions=​**​/*
